# auto-improvement

./: .gitignore  Dockerfile  INSTALL.md  LICENSE  Makefile  README.md  pyproject.toml
auto_improvement/: __init__.py  analyzer.py  cli.py  config.py  core.py  git_manager.py  models.py
auto_improvement/agent_clients/: abstract_agent.py  claude_client.py
auto_improvement/issues_tracker_clients/: abstract_issue_tracker.py  github_issues_client.py  jira_client.py  trac_client.py
auto_improvement/version_control_clients/: abstract_version_control_client.py  github_client.py
examples/: django_config.yaml  django_github_issues.yaml  example_usage.py
tests/: __init__.py  conftest.py
tests/cassettes/: complete_cycle_fastapi.yaml  cross_project_comparison.yaml  full_cycle_django_prs_auto.yaml  full_cycle_django_trac.yaml  full_cycle_django_trac_issue.yaml  full_cycle_django_trac_issue_35000.yaml  full_cycle_fastapi_github_issues.yaml  full_cycle_kafka_jira.yaml  github_e2e_complete_flow.yaml  github_e2e_get_merged_prs.yaml  github_get_merged_prs.yaml  github_get_merged_prs_integration.yaml  github_get_merged_prs_workflow.yaml  github_get_readme.yaml  github_get_repo_info.yaml  github_get_repo_info_recording.yaml  github_issues_fastapi_extract.yaml  github_issues_fastapi_issue.yaml  github_issues_requests_issue.yaml  jira_extract_from_pr.yaml  jira_extract_from_url.yaml  jira_kafka_issue.yaml  jira_spark_issue.yaml  trac_django_issue_34678.yaml  trac_django_issue_35000.yaml  trac_extract_from_pr.yaml  trac_extract_from_url.yaml  trac_get_issue.yaml  trac_get_issue_integration.yaml
tests/integration/: __init__.py  test_improvement_cycle.py  test_issue_tracker_combinations.py
tests/unit/: __init__.py  test_config.py  test_git_manager.py  test_issue_trackers.py  test_models.py
